# ais_processing

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/ais_processing/processing/: Ais_preprocessing.py  _added_value.py  _added_value_util.py  _ais_helper_funcs.py  _util.py  data_cleaning.py
src/ais_processing/training/: _util.py
src/ais_processing/visualization/: visualize.py
