[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "ais_processing"
version = "0.0.1.1"
authors = [
  { name="Aalling93", email="kaaso@space.dtu.dk" },
]
description = "ais_processing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.urls]
"Homepage" = "https://github.com/aalling93/ais_processing"